fix: sidebar jumps back when open and hovering over the pin button

--- a/src/pages/layout/Layout.css
+++ b/src/pages/layout/Layout.css
@@ -56,7 +56,6 @@
   color: var(--accent-color);
 }
 
-.drifter-layout .drifter-layout-sidebar-pin:hover:before,
 .drifter-layout .drifter-layout-sidebar-pin:checked:before {
   color: var(--accent-color-complement);
 }
@@ -68,4 +67,7 @@
 /* avoid the sidebar jumping back when it's open and the user hovers over the pin button */
 .drifter-layout .drifter-layout-sidebar-pin:not(:checked):hover + .drifter-layout-sidebar {
   transition-delay: 1000000s;
+}
+.drifter-layout .drifter-layout-sidebar-pin:checked:hover + .drifter-layout-sidebar {
+  transition-delay: 0s;
 }
